--- a/python_server/.gitignore
+++ b/python_server/.gitignore
@@ -1,5 +1,5 @@
 /__pycache__
-/api_practice.py
-/serviceAccountKey.json
-/test.py
-/eggs.csv
+api_practice.py
+serviceAccountKey.json
+test.py
+eggs.csv
