--- a/python_server/app.yaml
+++ b/python_server/app.yaml
@@ -1,7 +1,7 @@
 runtime: python37
 env: standard
 service: default
-entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
+entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app #これを描かないときはサーバーエラーなったけどうまくいった # -> この状態でうまくいった
 
 automatic_scaling:
   min_idle_instances: automatic
