--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "yelp-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:8000/",
+  "proxy": "https://vocal-gist-373007.ts.r.appspot.com/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
