--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "yelp-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://vocal-gist-373007.ts.r.appspot.com/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -32,7 +31,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "off"
+    }
   },
   "browserslist": {
     "production": [
